syntax = "proto3";
package guestcoviderpb;
option go_package = "internal/guestcoviderpb";

message LivenessRequest {}

message LivenessResponse {
  string status = 1;
}

message ReadinessRequest {}

message ReadinessResponse {
  string status = 1;
}

message VersionRequest {}

message VersionResponse {
  string BuildTime = 1;
  string Version = 2;
  string Commit = 3;
}
